--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 lto = true
 
 [dependencies]
+lazy_static = "1.4.0"
 pest = "2.7"
 pest_fmt = "0.2"
 pest_meta = { version = "2.7", features = ["grammar-extras"] }
